--- a/p8105_hw6_ll3407.md
+++ b/p8105_hw6_ll3407.md
@@ -13,7 +13,8 @@ homicide = read_csv(file = "./data/homicide-data.csv") %>%
   unite("city_state",c("city", "state"), sep = ",") %>% 
   mutate(
     sovled = recode(
-       disposition, 'Closed by arrest' = 1, 'Closed without arrest' = 0, 'Open/No arrest' = 0))
+       disposition, 'Closed by arrest' = 1, 'Closed without arrest' = 0, 'Open/No arrest' = 0)) %>% 
+  filter(city_state != c("Dallas,TX", "Phoenix,AZ", "Kansas City,MO", "Tulsa,AL"))
 ```
 
     ## Rows: 52179 Columns: 12
@@ -24,3 +25,25 @@ homicide = read_csv(file = "./data/homicide-data.csv") %>%
     ## 
     ## i Use `spec()` to retrieve the full column specification for this data.
     ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+``` r
+homicide
+```
+
+    ## # A tibble: 51,262 x 12
+    ##    uid       repor~1 victi~2 victi~3 victi~4 victi~5 victi~6 city_~7   lat   lon
+    ##    <chr>       <dbl> <chr>   <chr>   <chr>   <chr>   <chr>   <chr>   <dbl> <dbl>
+    ##  1 Alb-0000~  2.01e7 GARCIA  JUAN    Hispan~ 78      Male    Albuqu~  35.1 -107.
+    ##  2 Alb-0000~  2.01e7 MONTOYA CAMERON Hispan~ 17      Male    Albuqu~  35.1 -107.
+    ##  3 Alb-0000~  2.01e7 SATTER~ VIVIANA White   15      Female  Albuqu~  35.1 -107.
+    ##  4 Alb-0000~  2.01e7 MENDIO~ CARLOS  Hispan~ 32      Male    Albuqu~  35.1 -107.
+    ##  5 Alb-0000~  2.01e7 MULA    VIVIAN  White   72      Female  Albuqu~  35.1 -107.
+    ##  6 Alb-0000~  2.01e7 BOOK    GERALD~ White   91      Female  Albuqu~  35.2 -107.
+    ##  7 Alb-0000~  2.01e7 MALDON~ DAVID   Hispan~ 52      Male    Albuqu~  35.1 -107.
+    ##  8 Alb-0000~  2.01e7 MALDON~ CONNIE  Hispan~ 52      Female  Albuqu~  35.1 -107.
+    ##  9 Alb-0000~  2.01e7 MARTIN~ GUSTAVO White   56      Male    Albuqu~  35.1 -107.
+    ## 10 Alb-0000~  2.01e7 HERRERA ISRAEL  Hispan~ 43      Male    Albuqu~  35.1 -107.
+    ## # ... with 51,252 more rows, 2 more variables: disposition <chr>, sovled <dbl>,
+    ## #   and abbreviated variable names 1: reported_date, 2: victim_last,
+    ## #   3: victim_first, 4: victim_race, 5: victim_age, 6: victim_sex,
+    ## #   7: city_state
