--- a/p8105_hw6_ll3407.md
+++ b/p8105_hw6_ll3407.md
@@ -28,7 +28,7 @@ homicide = read_csv(file = "./data/homicide-data.csv") %>%
     ## i Use `spec()` to retrieve the full column specification for this data.
     ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
 
-\#Fit a logistic regression model for Baltimore
+Fit a logistic regression model for Baltimore
 
 ``` r
 Baltimore = homicide %>% 
@@ -41,7 +41,7 @@ OR and 95% CIs for the resolved homicide comparing male to female in
 Baltimore
 
 ``` r
-OR_Baltimore = fit_Baltimore %>% broom::tidy() %>% 
+OR_Baltimore = fit_Baltimore %>% broom::tidy() %>%
   filter(term == "victim_sexMale") %>% 
   select(estimate, std.error) %>% 
   mutate(
@@ -81,5 +81,25 @@ OR = nest %>%
     ci_lower = exp(estimate-1.96*std.error), 
     ci_upper = exp(estimate+1.96*std.error)
   ) %>% 
-    select( -estimate, -std.error)
+    select( -estimate, -std.error) 
 ```
+
+Plot of ORs and CIs for each city.
+
+``` r
+plot_OR = OR_all %>% ggplot(aes(reorder(city_state,OR_M_to_F), y = OR_M_to_F)) + geom_point() + 
+    geom_errorbar(aes(ymin = ci_lower, ymax = ci_upper))+ 
+  labs(
+    title = "Plot of Plot of ORs and CIs for resolved homicides comparing male to female in each city",
+    x = "City",
+    y = "OR and 95% CIs") +
+  theme(axis.text.x = element_text(angle = 70, vjust = 0.5, hjust = 1))
+
+plot_OR
+```
+
+<img src="p8105_hw6_ll3407_files/figure-gfm/unnamed-chunk-5-1.png" width="90%" />
+Comment: Telsa in AL has the highest OR of resolved homicides comparing
+males to females, while New York in NY has the lowest. San Bernardino in
+CA has the widest CI range of resolved homicides comparing males to
+females, while Chicago in IL has the narrowest.
