--- a/p8105_hw6_ll3407.Rmd
+++ b/p8105_hw6_ll3407.Rmd
@@ -44,7 +44,7 @@ homicide = read_csv(file = "./data/homicide-data.csv") %>%
 
 ```
 
-#Fit a logistic regression model for Baltimore
+Fit a logistic regression model for Baltimore
 ```{r}
 Baltimore = homicide %>% 
   filter(city_state == "Baltimore,MD") 
@@ -55,7 +55,7 @@ Baltimore = homicide %>%
 
 OR and 95% CIs for the resolved homicide comparing male to female in Baltimore
 ```{r}
-OR_Baltimore = fit_Baltimore %>% broom::tidy() %>% 
+OR_Baltimore = fit_Baltimore %>% broom::tidy() %>%
   filter(term == "victim_sexMale") %>% 
   select(estimate, std.error) %>% 
   mutate(
@@ -94,6 +94,24 @@ OR = nest %>%
     ci_lower = exp(estimate-1.96*std.error), 
     ci_upper = exp(estimate+1.96*std.error)
   ) %>% 
-    select( -estimate, -std.error)
+    select( -estimate, -std.error) 
 ```
+
+Plot of ORs and CIs for each city.
+```{r}
+plot_OR = OR_all %>% ggplot(aes(reorder(city_state,OR_M_to_F), y = OR_M_to_F)) + geom_point() + 
+    geom_errorbar(aes(ymin = ci_lower, ymax = ci_upper))+ 
+  labs(
+    title = "Plot of Plot of ORs and CIs for resolved homicides comparing male to female in each city",
+    x = "City",
+    y = "OR and 95% CIs") +
+  theme(axis.text.x = element_text(angle = 70, vjust = 0.5, hjust = 1))
+
+plot_OR
+
+
+```
+Comment: Telsa in AL has the highest OR of resolved homicides comparing males to females, while New York in NY has the lowest. San Bernardino in CA has the widest CI range of resolved homicides comparing males to females, while Chicago in IL has the narrowest.
+
+
 
