--- a/p8105_hw6_ll3407.md
+++ b/p8105_hw6_ll3407.md
@@ -58,8 +58,7 @@ to female.
 nest = homicide %>% 
   select(city_state,resolved,victim_age,victim_sex,victim_race) %>% 
   mutate(race = recode(
-       victim_race, 'Black' = 1, 'White' = 0)) %>% 
-  mutate(sex_male = recode(
+       victim_race, 'Black' = 1, 'White' = 0)) %>%   mutate(sex_male = recode(
        victim_sex, 'Male' = 1, 'Female' = 0, 'Unknown' = 0)) %>% 
    mutate(sex_unknown = recode(
        victim_sex, 'Unknown' = 1, 'Female' = 0, 'Male' = 0))  %>% 
@@ -103,3 +102,80 @@ Comment: Telsa in AL has the highest OR of resolved homicides comparing
 males to females, while New York in NY has the lowest. San Bernardino in
 CA has the widest CI range of resolved homicides comparing males to
 females, while Chicago in IL has the narrowest.
+
+## Problem 3
+
+Read and clean data
+
+``` r
+BW = read_csv(file = "./data/birthweight.csv") %>%
+  janitor::clean_names() %>% 
+  mutate(babysex = as.factor(babysex)) %>% 
+  mutate(frace = as.factor(frace)) %>% 
+  mutate(malform = as.factor(malform)) %>% 
+  mutate(mrace = as.factor(mrace)) 
+```
+
+    ## Rows: 4342 Columns: 20
+    ## -- Column specification --------------------------------------------------------
+    ## Delimiter: ","
+    ## dbl (20): babysex, bhead, blength, bwt, delwt, fincome, frace, gaweeks, malf...
+    ## 
+    ## i Use `spec()` to retrieve the full column specification for this data.
+    ## i Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+``` r
+head(BW, 100)
+```
+
+    ## # A tibble: 100 x 20
+    ##    babysex bhead blength   bwt delwt fincome frace gaweeks malform menarche
+    ##    <fct>   <dbl>   <dbl> <dbl> <dbl>   <dbl> <fct>   <dbl> <fct>      <dbl>
+    ##  1 2          34      51  3629   177      35 1        39.9 0             13
+    ##  2 1          34      48  3062   156      65 2        25.9 0             14
+    ##  3 2          36      50  3345   148      85 1        39.9 0             12
+    ##  4 1          34      52  3062   157      55 1        40   0             14
+    ##  5 2          34      52  3374   156       5 1        41.6 0             13
+    ##  6 1          33      52  3374   129      55 1        40.7 0             12
+    ##  7 2          33      46  2523   126      96 2        40.3 0             14
+    ##  8 2          33      49  2778   140       5 1        37.4 0             12
+    ##  9 1          36      52  3515   146      85 1        40.3 0             11
+    ## 10 1          33      50  3459   169      75 2        40.7 0             12
+    ## # ... with 90 more rows, and 10 more variables: mheight <dbl>, momage <dbl>,
+    ## #   mrace <fct>, parity <dbl>, pnumlbw <dbl>, pnumsga <dbl>, ppbmi <dbl>,
+    ## #   ppwt <dbl>, smoken <dbl>, wtgain <dbl>
+
+Check missing data
+
+``` r
+  summary(BW$pnumlbw)
+```
+
+    ##    Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
+    ##       0       0       0       0       0       0
+
+``` r
+  summary(BW$pnumsga)
+```
+
+    ##    Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
+    ##       0       0       0       0       0       0
+
+Variables of pnumlbw and pnumsga are with “0” value, so we should not
+include them in the models
+
+``` r
+fit_BW = 
+  BW %>% lm(bwt ~ babysex + bhead + blength + delwt + fincome + frace + gaweeks + malform + menarche + mheight + momage + mrace + parity + ppbmi + ppwt + smoken + wtgain, data = .) %>% broom::tidy()  
+  
+exclude = fit_BW %>% filter(p.value >= 0.05)
+view(exclude)
+```
+
+In the logistic models, we will remove the covariate with a
+p-value\>=0.05 (fincome, frace, malforml, menarche, mheight, momage,
+ppbmi, ppwt).
+
+``` r
+lm_BW = lm(bwt ~ babysex + bhead + blength + delwt + gaweeks + mrace + parity + smoken + wtgain, data = BW) %>% broom::tidy()
+```
