--- a/p8105_hw6_ll3407.Rmd
+++ b/p8105_hw6_ll3407.Rmd
@@ -161,16 +161,6 @@ Plot_pred_resid = BW %>%
 Plot_pred_resid
 ```
 
-cross validation
-```{r}
-cv_df = 
-  crossv_mc(BW, 100) %>% 
-  mutate(
-    train = map(train, as_tibble),
-    test = map(test, as_tibble)
-  ) %>% 
-
-```
 
 Two other models
 ```{r}
@@ -230,4 +220,4 @@ cv_df %>%
   summarize(avg_rmse = mean(rmse))
 ```
 
-The model I built is the best, and model 2 is better than model 1.
+The model I built is optimal, and model 2 is better than model 1.
